--- a/aula-14-05/styles.css
+++ b/aula-14-05/styles.css
@@ -4,9 +4,14 @@ body{
 
 h1{
 background-color: #b2b3db;
+text-align: center;
 }
 
 h2{
 background-color: #c5c6e4;
+}
+
+pre{
+    background-color: #8f93cc;
 }
 
